Added todo about container checks

--- a/todo
+++ b/todo
@@ -1,3 +1,4 @@
 TODO: Make a web launch function
 TODO: Consolidate item functions into single script
 TODO: Deployment file that configures crontab
+TODO: Implement container checks starting with Solaris zones and LXC
