--- a/todo
+++ b/todo
@@ -1,4 +1,8 @@
-TODO: Make a web launch function
-TODO: Consolidate item functions into single script
-TODO: Deployment file that configures crontab
-TODO: Verify container checks on Solaris zones
+TYPE	COMPONENT	DESCRIPTION
+NEW	Web Config	Make a web launch to open browser to appropriate URL
+REFACT	Item Scripts	Consolidate item functions into single script - some of this is done - item creation not done
+NEW	Web Config	Deployment file that configures crontab
+VERIFY	Command Exec	Verify container checks on Solaris zones
+NEW	Web view	Store item detail selection state - reopen on browser refresh
+ONGOING	Tests		Create tests for results, web and any new features
+NEW	Web view	Collapsable tree view of items based on item ID - level0_level1_levelN_item - Status of collapsed items represented by parent
