Document tag filtering requirements

--- a/todo
+++ b/todo
@@ -5,4 +5,6 @@ NEW	Web Config	Deployment file that configures crontab - add to and complete app
 VERIFY	Command Exec	Verify container checks on Solaris zones
 ONGOING	Tests		Create tests for results, web and any new features
 NEW	Web view	Collapsable tree view of items based on item ID - level0_level1_levelN_item - Status of collapsed items represented by parent
+NEW Web view    Filter items by tag
+NEW web view    Dynamic tag search with auto complete/suggestion or tag cloud or alphabetized list
 BUG     Web view    Detail area not resizing on click event, only on page refresh
